@@ -41,6 +41,7 @@ This issue fixes several bugs that were still found in 1.9.2.
 * Fix tinydisplay texture errors on shutdown
 * Fix mipmap filtering issues in tinydisplay renderer
 * Fix exception when creating intervals before ShowBase is started
+* Fix rare X11 .ico cursor bug; also now supports PNG-compressed icons
 
 ------------------------  RELEASE 1.9.2  ------------------------
 
